--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -309,7 +310,7 @@
 
                 <p class="center">
                 <h2 class="h2">LOGIN FOR HOSPITALS</h2>
-                <form action="form.html" method="POST" target="_blank">
+                <form action="form.php" method="POST" target="_blank">
                     <button type="submit" class="button1" id="button1">HOSPITALS</button>
                 </form>
                 </p>
