--- a/form.html
+++ b/form.html
@@ -63,7 +63,7 @@
     }
 </style>
 <body>
-    <h1>HOSPITALS</h1>
+    <h1>HOSPITAL</h1>
     <div>
     <form action="hos.php" method="POST">
         <label for="name">Name</label>
